--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "build": "tsc"
+    "build": "heft build --clean"
   },
   "dependencies": {
-    "@microsoft/rush-lib": "5.39.1",
-    "@rushstack/node-core-library": "3.19.5",
-    "glob": "7.1.6"
+    "@microsoft/rush-lib": "5.46.1",
+    "@rushstack/node-core-library": "3.39.0",
+    "glob": "7.1.6",
+    "semver": "7.3.2"
   },
   "devDependencies": {
-    "typescript": "3.8.3",
+    "@rushstack/heft-node-rig": "^1.1.2",
+    "@rushstack/heft": "^0.33.0",
     "@types/node": "10.17.17",
-    "@types/glob": "7.1.1"
+    "@types/glob": "7.1.1",
+    "@types/semver": "7.2.0",
+    "@types/webpack": "4.41.13"
   },
   "author": "",
   "license": "ISC"
