--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "build": "heft build --clean"
   },
   "dependencies": {
-    "@microsoft/rush-lib": "5.46.1",
-    "@rushstack/node-core-library": "3.39.0",
+    "@rushstack/rush-sdk": "latest",
+    "@rushstack/node-core-library": "latest",
     "glob": "7.1.6",
     "semver": "7.3.2"
   },
   "devDependencies": {
-    "@rushstack/heft-node-rig": "^1.1.2",
-    "@rushstack/heft": "^0.33.0",
+    "@rushstack/heft-node-rig": "latest",
+    "@rushstack/heft": "latest",
     "@types/node": "10.17.17",
     "@types/glob": "7.1.1",
     "@types/semver": "7.2.0",
