--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "build": "heft build --clean"
   },
   "dependencies": {
-    "@microsoft/rush-lib": "5.46.1",
-    "@rushstack/node-core-library": "3.39.0",
-    "glob": "7.1.6",
-    "semver": "7.3.2"
+    "@microsoft/rush-lib": "5.126.0",
+    "@rushstack/node-core-library": "4.0.2",
+    "@rushstack/rush-sdk": "5.126.0",
+    "@rushstack/terminal": "0.10.0",
+    "glob": "7.2.0",
+    "semver": "7.3.5"
   },
   "devDependencies": {
-    "@rushstack/heft-node-rig": "^1.1.2",
-    "@rushstack/heft": "^0.33.0",
-    "@types/node": "10.17.17",
-    "@types/glob": "7.1.1",
-    "@types/semver": "7.2.0",
-    "@types/webpack": "4.41.13"
+    "@rushstack/heft-node-rig": "^1.5.0",
+    "@rushstack/heft": "^0.44.0",
+    "@types/node": "18.18.9",
+    "@types/glob": "7.1.4",
+    "@types/semver": "7.3.8",
+    "@types/webpack": "4.41.32"
   },
   "author": "",
   "license": "ISC"
